--- a/reactprojekat/src/App.css
+++ b/reactprojekat/src/App.css
@@ -131,3 +131,42 @@ tr:hover {
   cursor: pointer;
   color: white;
 }
+
+ 
+nav {
+  background-color: #934683;
+  color: white;
+  padding: 10px 0;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+}
+
+li {
+  margin: 0 10px;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+}
+
+button {
+  background-color: #baabbd;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #d5cfe1;
+}
