--- a/reactprojekat/src/App.css
+++ b/reactprojekat/src/App.css
@@ -195,3 +195,14 @@ button:hover {
    margin: 50px;
    box-shadow: 2p;
 }
+
+.admin-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.chart-container {
+  width: 60%;
+  margin-bottom: 20px;
+}
